fixed up input jumps

--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -56,6 +56,12 @@ md-input-container {
     padding-bottom: 10px !important;
   }
 
+  &.md-input-focused {
+    input.md-input,
+    textarea.md-input {
+      padding-bottom: 9px !important;
+    }
+  }
 
   &.bold {
     &.md-input-focused {
